[tool.poetry]
name = "warcdb"
version = "0.1.0"
description = "WarcDB: Web crawl data as SQLite databases"
authors = ["Florents Tselai <florents@tselai.com>"]
readme = "README.md"
license = "Apache License, Version 2.0"
repository = "https://github.com/Florents-Tselai/warcdb"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.poetry.scripts]
warcdb = "warcdb:warcdb_cli"

[tool.poetry.dependencies]
python = "^3.9"
sqlite-utils
warcio
click
more-itertools
tqdm
requests

[tool.poetry.group.test.dependencies]
pytest
black

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
