[tool.poetry]
name = "warcdb"
version = "0.1.0"
description = "WarcDB: Web crawl data as SQLite databases"
authors = ["Florents Tselai <florents@tselai.com>"]
readme = "README.md"
license = "Apache License, Version 2.0"
repository = "https://github.com/Florents-Tselai/warcdb"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.poetry.scripts]
warcdb = "warcdb:warcdb_cli"

[tool.poetry.dependencies]
python = "^3.9"
sqlite-utils = "^3.26.1" 
warcio = "^1.7.4"
click = "^8.1.3"
more-itertools = "^10.1.0"
tqdm = "^4.66.1"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
black = "^23.10.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
