[tool.poetry]
name = "warcdb"
version = "0.2.2"
description = "WarcDB: Web crawl data as SQLite databases"
authors = ["Florents Tselai <florents@tselai.com>"]
readme = "README.md"
license = "Apache License, Version 2.0"
repository = "https://github.com/Florents-Tselai/warcdb"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.poetry.scripts]
warcdb = "warcdb:warcdb_cli"

[tool.poetry.dependencies]
python = "^3.9"
sqlite-utils = "^3.26" 
warcio = "^1.7"
click = "^8.1"
more-itertools = "^10.1"
tqdm = "^4.66"
requests = "^2.31"
sqlite-migrate = "0.1a2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
black = "^23.10"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
